# fresh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILE-EXPLORER-STATUS.md  FILE-EXPLORER.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  build.rs  check_themes.py  colors.md  config.example.json  dist-workspace.toml  flake.nix  installer.sh  uninstaller.sh
crates/fresh-core/: Cargo.toml
crates/fresh-core/src/: action.rs  api.rs  command.rs  config.rs  file_explorer.rs  hooks.rs  lib.rs  menu.rs  overlay.rs  services.rs  text_property.rs
crates/fresh-editor/: Cargo.toml  build.rs  config.example.json
crates/fresh-editor/debian/: postinst  postrm
crates/fresh-editor/docs/: fresh.txt
crates/fresh-editor/examples/: test_todo_comments.txt
crates/fresh-editor/flatpak/: .gitignore  README.md  io.github.sinelaw.fresh.desktop  io.github.sinelaw.fresh.metainfo.xml  io.github.sinelaw.fresh.yml
crates/fresh-editor/keymaps/: default.json  emacs.json  macos.json
crates/fresh-editor/locales/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  zh-CN.json
crates/fresh-editor/npm-package/: binary-install.js  binary.js  install.js  local.test.js  package.json.template  run-fresh.js
crates/fresh-editor/plugins/: README.md  audit_mode.i18n.json  audit_mode.ts  buffer_modified.i18n.json  buffer_modified.ts  calculator.i18n.json  calculator.ts  clangd_support.i18n.json  clangd_support.md  clangd_support.ts  color_highlighter.i18n.json  color_highlighter.ts  config-schema.json  csharp_support.i18n.json  csharp_support.ts  diagnostics_panel.ts  find_references.i18n.json  find_references.ts  git_blame.i18n.json  git_blame.ts  git_explorer.ts  git_find_file.i18n.json  git_find_file.ts  git_grep.i18n.json  git_grep.ts  git_gutter.i18n.json  git_gutter.ts  git_log.i18n.json  git_log.ts  java-lsp.ts  latex-lsp.ts  live_grep.i18n.json  live_grep.ts  markdown_compose.i18n.json  markdown_compose.ts  marksman-lsp.ts  merge_conflict.i18n.json  merge_conflict.ts  odin-lsp.ts  path_complete.i18n.json  (+14 more)
crates/fresh-editor/plugins/examples/: README.md  async_demo.ts  bookmarks.ts  buffer_query_demo.ts  git_grep.ts  hello_world.ts  virtual_buffer_demo.ts
crates/fresh-editor/plugins/lib/: finder.ts  fresh.d.ts  index.ts  navigation-controller.ts  panel-manager.ts  search-utils.ts  virtual-buffer-factory.ts
crates/fresh-editor/queries/bash/: indents.scm
crates/fresh-editor/queries/c/: indents.scm
crates/fresh-editor/queries/cpp/: indents.scm
crates/fresh-editor/queries/csharp/: indents.scm
crates/fresh-editor/queries/css/: indents.scm
crates/fresh-editor/queries/go/: indents.scm
crates/fresh-editor/queries/html/: indents.scm
crates/fresh-editor/queries/java/: indents.scm
crates/fresh-editor/queries/javascript/: indents.scm
crates/fresh-editor/queries/json/: indents.scm
crates/fresh-editor/queries/lua/: indents.scm
crates/fresh-editor/queries/pascal/: indents.scm
crates/fresh-editor/queries/php/: indents.scm
crates/fresh-editor/queries/python/: indents.scm
crates/fresh-editor/queries/ruby/: indents.scm
crates/fresh-editor/queries/rust/: indents.scm
crates/fresh-editor/queries/typescript/: indents.scm
crates/fresh-editor/scripts/: bump-version.py  fresh-wrapper.sh  generate_ts_types.py  install.sh  landscape-wide.txt  landscape.txt  parse_flamegraph.py  png_to_ansi.py  record-demo.sh  release.sh  stress_test.sh  test-packages.sh
crates/fresh-editor/src/: config.rs  config_io.rs  i18n.rs  lib.rs  main.rs  partial_config.rs  state.rs  types.rs
crates/fresh-editor/src/app/: async_messages.rs  buffer_management.rs  calibration_actions.rs  clipboard.rs  composite_buffer_actions.rs  file_explorer.rs  file_open.rs  file_open_input.rs  file_operations.rs  help.rs  input.rs  input_dispatch.rs  lsp_actions.rs  lsp_requests.rs  menu_actions.rs  menu_context.rs  mod.rs  mouse_input.rs  on_save_actions.rs  plugin_commands.rs  popup_actions.rs  prompt_actions.rs  render.rs  session.rs  settings_actions.rs  shell_command.rs  split_actions.rs  tab_drag.rs  terminal.rs  terminal_input.rs  toggle_actions.rs  types.rs  undo_actions.rs  view_actions.rs  warning_domains.rs
crates/fresh-editor/src/grammars/: git-commit.sublime-syntax  git-rebase.sublime-syntax  gitattributes.sublime-syntax  gitconfig.sublime-syntax  gitignore.sublime-syntax  toml.sublime-syntax  zig.sublime-syntax
crates/fresh-editor/src/input/: actions.rs  buffer_mode.rs  command_registry.rs  commands.rs  composite_router.rs  fuzzy.rs  handler.rs  key_translator.rs  keybindings.rs  mod.rs  tests_language_features.rs
crates/fresh-editor/src/model/: buffer.rs  composite_buffer.rs  control_event.rs  cursor.rs  document_model.rs  edit.rs  event.rs  filesystem.rs  line_diff.rs  marker.rs  marker_tree.rs  mod.rs
crates/fresh-editor/src/primitives/: ansi.rs  ansi_background.rs  display_width.rs  grapheme.rs  highlight_engine.rs  highlighter.rs  indent.rs  line_iterator.rs  line_wrapping.rs  mod.rs  reference_highlighter.rs  snippet.rs  text_property.rs  (+2 more)
crates/fresh-editor/tests/: focused_bug_test.rs  harness_test.rs  integration_tests.rs  merge_parser_test.js  property_persistence_tests.rs  property_tests.proptest-regressions  property_tests.rs  regression_hidden_cursor_panic.rs  test_line_iterator_comprehensive.rs  test_overlay_colors.rs  test_plugin_i18n.rs  test_plugin_i18n_completeness.rs  test_theme_schema_i18n.rs
crates/fresh-editor/themes/: dark.json  dracula.json  high-contrast.json  light.json  nord.json  nostalgia.json  solarized-dark.json
crates/fresh-editor/types/: fresh.d.ts.template
crates/fresh-editor/winget/: sinelaw.fresh-editor.yaml.template
crates/fresh-languages/: Cargo.toml
crates/fresh-languages/src/: lib.rs
crates/fresh-parser-js/: Cargo.toml
crates/fresh-parser-js/src/: lib.rs
crates/fresh-plugin-api-macros/: Cargo.toml
crates/fresh-plugin-api-macros/src/: lib.rs
crates/fresh-plugin-runtime/: Cargo.toml
crates/fresh-plugin-runtime/src/: lib.rs  process.rs  thread.rs  ts_export.rs
(+541 files in other folders)
