[package]
name = "editor"
version = "0.1.0"
authors = ["Noam Lewis"]
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tree-sitter-highlight = "0.24.7"
tree-sitter-rust = "0.23.2"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.15.0"