[package]
name = "fresh-languages"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-pascal = { version = "0.10.2", optional = true }
tree-sitter-odin = { version = "1.3.0", optional = true }
tracing.workspace = true

[features]
all-languages = [
    "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript",
    "tree-sitter-html", "tree-sitter-css", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-go",
    "tree-sitter-json", "tree-sitter-java", "tree-sitter-c-sharp", "tree-sitter-php", "tree-sitter-ruby",
    "tree-sitter-bash", "tree-sitter-lua", "tree-sitter-pascal", "tree-sitter-odin"
]
