[package]
name = "fresh-parser-js"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_transformer.workspace = true
oxc_codegen.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
serde.workspace = true
