[package]
name = "fresh-plugin-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JavaScript plugin runtime for Fresh editor"

[dependencies]
rquickjs.workspace = true
rquickjs-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
fresh-core = { workspace = true, features = ["plugins"] }
fresh-parser-js.workspace = true
fresh-plugin-api-macros.workspace = true
ts-rs.workspace = true
lsp-types.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_codegen.workspace = true
oxc_span.workspace = true
oxc_diagnostics.workspace = true
